# Commandor

./: .ai_terminal_history  .gitignore  CONCEPT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ai_assistant.py  ai_terminal.py  command_executor.py  command_processor.py  config.py  main.py  pyproject.toml  requirements.txt  setup.py  terminal_assistant.py  utils.py
.github/workflows/: publish.yml
commandor/: __init__.py  __main__.py  agent_bridge.py  api_manager.py  config.py  main.py  session_manager.py  terminal.py  textual_app.py  tui.py
commandor/agent/: __init__.py  agent.py  executor.py  lc_graph.py  lc_models.py  lc_tools.py  modes.py  prompts.py  tools.py
commandor/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py  openrouter.py
commandor/utils/: __init__.py  diff_display.py  file_ops.py  shell.py
commandor/widgets/: __init__.py  terminal_widget.py
terminusai/: __init__.py  main.py  terminal.py
